--- a/app.json
+++ b/app.json
@@ -1,40 +1,29 @@
 {
-  "addons": [
-
-  ],
-  "buildpacks": [
-    {
-      "url": "heroku/ruby"
-    }
-  ],
-  "description": "",
+  "name": "Spotify Token Swap Service",
+  "description":
+    "Swap tokens for using Spotify APIs and SDKs, made really simple 🔑 ⛓",
+  "keywords": ["spotify", "authorization code", "ruby", "sinatra", "heroku"],
+  "addons": [],
   "env": {
-    "ENCRYPTION_SECRET": {
-      "required": true
-    },
-    "LANG": {
-      "required": true
-    },
-    "RACK_ENV": {
-      "required": true
-    },
-    "SPOTIFY_CLIENT_CALLBACK_URL": {
-      "required": true
-    },
     "SPOTIFY_CLIENT_ID": {
+      "description":
+        "Client ID of your Spotify application. Find it at https://developer.spotify.com/dashboard",
       "required": true
     },
     "SPOTIFY_CLIENT_SECRET": {
+      "description":
+        "Client Secret of your Spotify application. Find it at https://developer.spotify.com/dashboard",
       "required": true
+    },
+    "SPOTIFY_CLIENT_CALLBACK_URL": {
+      "description":
+        "A registered callback URL for your Spotify application. Register a callback in 'Edit Settings' at https://developer.spotify.com/dashboard",
+      "value": "yourapplication://",
+      "required": true
+    },
+    "ENCRYPTION_SECRET": {
+      "description": "A secret key for additional security of refresh tokens.",
+      "generator": "secret"
     }
-  },
-  "formation": {
-    "web": {
-      "quantity": 1
-    }
-  },
-  "name": "SONOSAID",
-  "scripts": {
-  },
-  "stack": "heroku-18"
+  }
 }
